[FIX] Links work better on mobile

--- a/css/global.css
+++ b/css/global.css
@@ -426,5 +426,6 @@ footer p {
 
     #links .smallContainer {
         margin: auto;
+        width: initial;
     }
 }
